--- a/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/Base.lproj/Main.storyboard
+++ b/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="hq6-Bi-9Vr">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Ghz-qv-MNd">
     <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -132,7 +132,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rKZ-Cf-yGq">
-                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SRL-WQ-xqY" userLabel="Content View">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="685.66666666666663"/>
@@ -168,7 +168,7 @@
                                                         </state>
                                                     </button>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nSX-4R-nQN">
-                                                        <rect key="frame" x="20" y="169.99999999999994" width="334" height="36"/>
+                                                        <rect key="frame" x="20" y="170" width="334" height="36"/>
                                                         <color key="backgroundColor" red="1" green="0.64313725489999995" blue="0.35686274509999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                         <state key="normal" title="Login">
@@ -437,24 +437,6 @@
             </objects>
             <point key="canvasLocation" x="1324.6376811594205" y="2372.5446428571427"/>
         </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="mzJ-s7-l8D">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="hq6-Bi-9Vr" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="oJ4-Ur-nQG">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="Ghz-qv-MNd" kind="relationship" relationship="rootViewController" id="UEW-Mb-Q4K"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="sjI-oN-vkR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-2520" y="530"/>
-        </scene>
         <!--Sign Up View Controller-->
         <scene sceneID="M1a-F7-LVc">
             <objects>
@@ -518,6 +500,7 @@
                                                         </userDefinedRuntimeAttributes>
                                                         <connections>
                                                             <action selector="loginButtonPressed:" destination="w39-Ll-aUk" eventType="touchUpInside" id="fue-14-yjl"/>
+                                                            <action selector="signUpButtonPressed:" destination="w39-Ll-aUk" eventType="touchUpInside" id="Vyd-QA-eSA"/>
                                                         </connections>
                                                     </button>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sign Up with Google" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jXp-IV-VWk">
@@ -549,6 +532,7 @@
                                                                     <color key="titleColor" red="1" green="0.64313725489999995" blue="0.35686274509999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                 </state>
                                                                 <connections>
+                                                                    <action selector="loginHereButtonPressed:" destination="w39-Ll-aUk" eventType="touchUpInside" id="gBY-TB-xtn"/>
                                                                     <action selector="signUpButtonPressed:" destination="w39-Ll-aUk" eventType="touchUpInside" id="OZ3-lc-Acb"/>
                                                                 </connections>
                                                             </button>
@@ -634,9 +618,10 @@
                     </view>
                     <navigationItem key="navigationItem" id="izZ-Yx-3wu"/>
                     <connections>
-                        <outlet property="emailTextField" destination="0XM-DC-Wp1" id="IB2-ib-Dny"/>
-                        <outlet property="frameView" destination="pus-pD-cSQ" id="mq6-T7-jAf"/>
-                        <outlet property="passwordTextField" destination="qmb-OC-YrS" id="4tJ-sl-4Fk"/>
+                        <outlet property="emailTextField" destination="0XM-DC-Wp1" id="7Ui-AO-PN9"/>
+                        <outlet property="frameView" destination="pus-pD-cSQ" id="31I-hC-X8Z"/>
+                        <outlet property="fullNameTextField" destination="iZB-bB-f48" id="Raj-ZI-HZ9"/>
+                        <outlet property="passwordTextField" destination="qmb-OC-YrS" id="7P9-Qc-bcM"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="acR-Yu-gM9" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
