--- a/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/View/Categories Collection View Cell/CategoryCollectionViewCell.xib
+++ b/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/View/Categories Collection View Cell/CategoryCollectionViewCell.xib
@@ -4,7 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -12,6 +12,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CategoryCollectionViewCell" customModule="Bazaar_iOS" customModuleProvider="target">
             <connections>
                 <outlet property="categoryNameLabel" destination="yjw-e3-ZiC" id="e23-fT-eOM"/>
+                <outlet property="cellBackgroundView" destination="XIa-sV-xKv" id="h0w-Qu-Hoe"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -25,15 +26,20 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XIa-sV-xKv">
                         <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yjw-e3-ZiC">
-                                <rect key="frame" x="4" y="14" width="42" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yjw-e3-ZiC">
+                                <rect key="frame" x="5" y="5" width="40" height="40"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" name="AccentColor"/>
+                        <constraints>
+                            <constraint firstItem="yjw-e3-ZiC" firstAttribute="top" secondItem="XIa-sV-xKv" secondAttribute="top" constant="5" id="78L-Te-7Se"/>
+                            <constraint firstItem="yjw-e3-ZiC" firstAttribute="leading" secondItem="XIa-sV-xKv" secondAttribute="leading" constant="5" id="Xl8-YG-Twk"/>
+                            <constraint firstAttribute="bottom" secondItem="yjw-e3-ZiC" secondAttribute="bottom" constant="5" id="c17-X1-MSg"/>
+                            <constraint firstAttribute="trailing" secondItem="yjw-e3-ZiC" secondAttribute="trailing" constant="5" id="nZl-W9-B0r"/>
+                        </constraints>
                     </view>
                 </subviews>
                 <constraints>
@@ -47,8 +53,8 @@
         </collectionViewCell>
     </objects>
     <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
+        <namedColor name="AccentColor">
+            <color red="0.0" green="0.46000000000000002" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
